--- a/web/Angular/angular.json
+++ b/web/Angular/angular.json
@@ -70,7 +70,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lab4:build"
+            "browserTarget": "lab4:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
